--- a/bio.m.html
+++ b/bio.m.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Overpass|Yantramanav:900">
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/sage.css" media="screen">
 
 
 <script type="text/javascript">
@@ -29,23 +29,10 @@ document.location = "bio.html";
   <div class="mwrapper">
     <header>
       <h1 class="mtitle">Gray Cortright Thomas</h1>
-      <!-- <h1 class="subtitle">Scholar and Roboticist</h1> -->
     </header>
     
     <div id="container">
-      <!-- <div class="rmodule">
-        <img src="images/gray300.jpg" width="230" height="230">
-      </div>
 
-      <p class="tagline">
-        Robotic Control Scholar<br>
-        <a href="https://www.nasa.gov/feature/nstrf-2015">NASA Space Technology Fellow</a> 
-        <a href="https://www.nasa.gov/feature/controlling-robots-with-a-spring-in-their-step">"Controlling Robots with a Spring in Their Step"</a><br>
-        Ph.D. Student at <a href="http://www.me.utexas.edu/graduate/areas/dsc">UT Austin</a> with 
-        <a href="http://www.me.utexas.edu/faculty/faculty-directory/sentis">Luis Sentis</a><br>
-        Formerly at <a href="http://robots.ihmc.us/">IHMC</a> with <a href="https://www.ihmc.us/groups/jpratt/">Jerry Pratt</a><br>
-        gray.c.thomas&#64;[gmail.com or utexas.edu]
-      </p> -->
       <div id="main" role="main">
         <div class="download-bar">
           <div class="inner">
