An engineering postdoc

--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
     
     <div id="container">
      <p class="tagline">
-        An aspiring engineering professor at the scientific intersection of estimation, control, and wearable robotics.
+        An engineering postdoc at the scientific intersection of estimation, control, and wearable robotics.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
