--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
     
     <div id="container">
      <p class="tagline">
-        A senior research fellow at the University of Michigan researching direct human control of physically interactive robots.
+        Research Investigator at the University of Michigan in direct human control of physically interactive robots.
       </p>
       <div id="main" role="main">
         <p class="download-bar">
@@ -55,7 +55,7 @@
       
      <h1>Bio</h1>
       <p><img style="float: left; padding-right: 10px" height="300" src="images/gray_headshot_crop.jpg"> 
-Gray C. Thomas is a Senior Research Fellow at the University of Michigan in the Electrical Engineering and Computer Science Department, working with Professors <a href="https://gregg.engin.umich.edu/">Robert D. Gregg</a> and <a href="https://neurobionics.robotics.umich.edu/profiles/elliott-rouse/">Elliott J. Rouse</a>. He studies direct human control of physically interactive robots through a combination of strength amplification control, human modeling and estimation, and high-bandwidth design. He earned his 2019 Ph.D. in Mechanical Engineering from the University of Texas at Austin, where he worked with Professor Luis Sentis on the topics of multi-contact impedance control for humanoid robots, system identification for robust control, and series elastic actuation. These early directions offered a unique perspective that led to his current research. Prior to his Ph.D., he earned his B.S. in Engineering:Robotics at Olin College of Engineering in 2012. He was the recipient of the NASA Space Technology Research Fellowship and Olin Full-Tuition Scholarship and has worked at the Florida Institute for Human and Machine Cognition.
+Gray C. Thomas is a Research Investigator at the University of Michigan in the Robotics Department, working with Dr. <a href="https://gregg.engin.umich.edu/">Robert Gregg</a>. He studies direct human control of physically interactive robots through a combination of strength amplification control, human modeling and estimation, and high-bandwidth design. He earned his 2019 Ph.D. in Mechanical Engineering from the University of Texas at Austin, where he worked with Professor Luis Sentis on the topics of multi-contact impedance control for humanoid robots, system identification for robust control, and series elastic actuation. These early directions offered a unique perspective that led to his current research. Prior to his Ph.D., he earned his B.S. in Engineering:Robotics at Olin College of Engineering in 2012. He was the recipient of the NASA Space Technology Research Fellowship and Olin Full-Tuition Scholarship and has worked at the Florida Institute for Human and Machine Cognition.
 </p>
 
 
